--- a/views/head.html
+++ b/views/head.html
@@ -9,17 +9,9 @@
       
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 
-    <!-- Le styles -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
 
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/css/app.css" rel="stylesheet">
+    <link href="/ui/basic/all.css" rel="stylesheet">
+    <script src="/ui/lib/respond/respond.min.js"></script>
 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
