--- a/views/footer.html
+++ b/views/footer.html
@@ -1,2 +1,26 @@
+<!-- Footer -->
+
+  <footer class="row">
+  <div class="large-12 columns"><hr />
+      <div class="row">
+
+        <div class="large-6 columns">
+            <p>&copy; Copyright no one at all. Go to town.</p>
+        </div>
+
+        <div class="large-6 columns">
+            <ul class="inline-list right">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 2</a></li>
+              <li><a href="#">Link 3</a></li>
+              <li><a href="#">Link 4</a></li>
+            </ul>
+        </div>
+
+      </div>
+  </div>
+  </footer>
+
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.rc.2/handlebars.min.js"></script>
